# flysight2csv

./: .all-contributorsrc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.cjs  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: conf.py  formats.md  index.md  installation.md  requirements.txt  troubleshooting.md  usage.md
src/flysight2csv/: __init__.py  __main__.py  cli.py  const.py  csv.py  finder.py  parsed.py  parsed_csv.py  parser.py  program.py  program_params.py  reformatter.py  selection.py  writer.py
templates/: CHANGELOG.md.j2
tests/: common.py  conftest.py  test_cli.py  test_parser.py  test_program.py  test_python_module.py  test_writer.py
tests/data/: README.md  negative-microsecond-TRACK.CSV  tow-rollover-SENSOR.CSV
tests/data/cli_expected/: device1-23-12-16-metadata.txt  help.txt
tests/data/complete/23-12-31/: README.md
tests/data/complete/23-12-31/22-30-52/: SENSOR.CSV  TRACK.CSV
tests/data/complete/23-12-31/22-33-02/: SENSOR.CSV  TRACK.CSV
tests/data/complete/23-12-31/22-33-52/: SENSOR.CSV  TRACK.CSV
tests/data/device1/23-10-08/15-26-01/: SENSOR.CSV  TRACK.CSV
tests/data/device1/23-10-08/16-15-42/: SENSOR.CSV  TRACK.CSV
tests/data/device1/23-10-08/18-09-06/: SENSOR.CSV  TRACK.CSV
tests/data/device1/23-10-08/19-51-23/: SENSOR.CSV  TRACK.CSV
tests/data/device1/23-10-08/21-55-50/: SENSOR.CSV  TRACK.CSV
tests/data/device1/23-10-08/23-03-43/: SENSOR.CSV  TRACK.CSV
tests/data/device1/23-12-16/23-21-02/: SENSOR.CSV  TRACK.CSV
tests/data/device1/23-12-16/23-37-27/: SENSOR.CSV  TRACK.CSV
tests/data/device2/23-10-08/15-10-00/: SENSOR.CSV  TRACK.CSV
tests/data/device2/23-10-08/16-13-42/: SENSOR.CSV  TRACK.CSV
tests/data/device2/23-10-08/18-02-27/: SENSOR.CSV  TRACK.CSV
tests/data/device2/23-10-08/20-02-11/: SENSOR.CSV  TRACK.CSV
tests/data/device2/23-10-08/21-36-27/: README.md  SENSOR.CSV  TRACK.CSV
tests/data/device2/23-10-08/21-47-40/: SENSOR.CSV  TRACK.CSV
tests/data/device2/23-10-08/22-55-48/: SENSOR.CSV  TRACK.CSV
tests/data/device2/23-12-16/22-22-04/: SENSOR.CSV  TRACK.CSV
tests/data/device2/23-12-16/23-20-43/: SENSOR.CSV  TRACK.CSV
tests/data/device2/23-12-16/23-36-58/: README.md  SENSOR.CSV  TRACK.CSV
tests/data/formatted/expected/csv-flat/: merged.csv  sensor.csv  track.csv
tests/data/formatted/expected/json-lines-header/: sensor.jsonl
tests/data/formatted/expected/json-lines-minimal/: sensor.jsonl
tests/data/formatted/expected/jsonl-full/: merged.jsonl  sensor.jsonl  track.jsonl
tests/data/formatted/expected/jsonl-header/: merged.jsonl  sensor.jsonl  track.jsonl
tests/data/formatted/expected/jsonl-minimal/: merged.jsonl  sensor.jsonl
tests/data/formatted/input/: SENSOR.CSV  TRACK.CSV
tests/data/individual/: new-format-TRACK.csv
tests/data/invalid/: SENSOR-incomplete-meta.csv  SENSOR-incomplete-row.csv  incomplete-meta-SENSOR.csv  incomplete-row-SENSOR.csv  not_a_csv.txt
